@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 14-03-2006 added: You can activate specific parts of the Kai window using ActivateWindow(XLinkKai,part) where part is Chat,Games,Buddies or Arenas.
  - 14-03-2006 fixed: possible wrong xbe region stored in program database (update myprograms6.db)
  - 14-03-2006 changed: All strings/labels are internally UTF-8 now.  Will almost certainly require rescanning the databases if you use a non-Ascii charset.
  - 13-03-2006 changed: volume and seekbar speed is now independent on fps. at full speed 0-100% now takes 1 second.
